results of qc checks

--- a/qc/results/ibc-2015.qc.md
+++ b/qc/results/ibc-2015.qc.md
@@ -1,6 +1,6 @@
-# NEHRP-2009 Quality Control Tests +/- 0.0001
+# IBC-2015 Quality Control Tests +/- 0.0001
 > Generated: Tue, 03 Oct 2017 20:08:30 GMT
-> Using web service: http://localhost:8000/ws/designmaps/nehrp-2009.json
+> Using web service: http://localhost:8000/ws/designmaps/ibc-2015.json
 
 ### Legend
  - :green_heart: Passing
